--- a/Lab3/WebContent/Form1.html
+++ b/Lab3/WebContent/Form1.html
@@ -7,6 +7,7 @@
 First name: <input type="text" name="firstname"><br></br>
 Last name: <input type="text" name="lastname"><br></br>
 Date of Birth: <input type="text" name="dob"><br></br>
+Programming Languages: <input type="text" name="languages"><br></br>
 Available Days:<br>
 <input type="checkbox" name="available_days" value="Monday">Monday<br></br>
 <input type="checkbox" name="available_days" value="Tuesday">Tuesday<br></br>
