doGet almost done

--- a/Lab3/WebContent/Form1.html
+++ b/Lab3/WebContent/Form1.html
@@ -9,13 +9,13 @@ Last name: <input type="text" name="lastname"><br></br>
 Date of Birth: <input type="text" name="dob"><br></br>
 Programming Languages: <input type="text" name="languages"><br></br>
 Available Days:<br>
-<input type="checkbox" name="available_days" value="Monday">Monday<br></br>
-<input type="checkbox" name="available_days" value="Tuesday">Tuesday<br></br>
-<input type="checkbox" name="available_days" value="Wednesday">Wednesday<br></br>
-<input type="checkbox" name="available_days" value="Thursday">Thursday<br></br>
-<input type="checkbox" name="available_days" value="Friday">Friday<br></br>
-<input type="checkbox" name="available_days" value="Saturday">Saturday<br></br>
-<input type="checkbox" name="available_days" value="Sunday">Sunday<br></br>
+<input type="checkbox" name="days" value="M">Monday<br></br>
+<input type="checkbox" name="days" value="T">Tuesday<br></br>
+<input type="checkbox" name="days" value="W">Wednesday<br></br>
+<input type="checkbox" name="days" value="H">Thursday<br></br>
+<input type="checkbox" name="days" value="F">Friday<br></br>
+<input type="checkbox" name="days" value="S">Saturday<br></br>
+<input type="checkbox" name="days" value="U">Sunday<br></br>
 
 <input type="submit" value="Submit">
 
